# BOOKING-CONFLICT-CHECKER-USING-INTERVAL-TREE

./: BookingManager.hpp  CMakeLists.txt  IntervalTree.hpp  README.md  booking-conflict-checker  booking_conflict_checker.cpp  booking_conflict_gui.cpp  booking_conflict_web.html  example_usage.cpp  test_interval_tree.cpp
